Added cell type information to TXT output. Note that for downward compatibility a config file is written, could also be included in one of the existing files however. Fixed a bug: Output files would not have been overwritten previously if existent instead new data would have been appended to the files. Removed superfluous resource statement in build.xml